--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,8 @@ excerpt_separator: "o87q23ljbszhmbsdfmjxjryw3isdufhzcx,jehjzhdf,uih"
 # Members info
 
 groups:
-- name: Haddock Lab
+- name: Project Coordinators
   people:
-  - name: Steve Haddock
-    pic: steve.jpg
-    position: PI
-    social:
-      - title: twitter
-        url: twitter.com
-      - title: facebook
-        url: facebook.com
-      - title: stack-overflow
-        url: stack-overflow.com
-
   - name: Darrin Schultz
     pic: darrin.jpg
     position: PhD Student
@@ -37,32 +26,9 @@ groups:
       - title: stack-overflow
         url: stack-overflow.com
 
-  - name: Lynne Christianson
-    pic: lynne.jpg
-    position: Lab Technician
-    social:
-      - title: twitter
-        url: twitter.com
-      - title: facebook
-        url: facebook.com
-      - title: stack-overflow
-        url: stack-overflow.com
-  
-  
-  - name: Severine Martini
-    pic: severine.jpg
-    position: Data plotter
-    social:
-      - title: twitter
-        url: twitter.com
-      - title: facebook
-        url: facebook.com
-      - title: stack-overflow
-        url: stack-overflow.com
-  
-  - name: Jacob Winnikoff
-    pic: jacob.jpg
-    position: Cteno-freezer
+  - name: Steve Haddock
+    pic: steve.jpg
+    position: PI
     social:
       - title: twitter
         url: twitter.com
@@ -71,28 +37,44 @@ groups:
       - title: stack-overflow
         url: stack-overflow.com
 
-- name: Oba Lab
+- name: Contributors
   people:
+  - name: Warren Francis
+    pic: warren.jpg
+    position: Bioinformatician at LMUM
+    social:
+      - title: twitter
+        url: twitter.com
+      - title: facebook
+        url: facebook.com
+      - title: stack-overflow
+        url: stack-overflow.com
+
+  - name: Lynne Christianson
+    pic: lynne.jpg
+    position: Haddock Lab Technician
+    social:
+      - title: twitter
+        url: twitter.com
+      - title: facebook
+        url: facebook.com
+      - title: stack-overflow
+        url: stack-overflow.com
+
   - name: Yuichi Oba
     pic: oba.jpg
-    position: PI
+    position: PI at Chubu University
     social:
       - title: bug
         url: http://www3.chubu.ac.jp/faculty/oba_yuichi/English/
-  - name: octo
-    pic: octo.png
-    position: friend
+
+  - name: Ilia Yampolsky
+    pic: ilia.jpg
+    position: PI at IBCh-RAS
     social:
-      - title: twitter
-        url: twitter.com
-      - title: facebook
-        url: facebook.com
-      - title: stack-overflow
-        url: stack-overflow.com
+      - title: bug
+        url: http://www3.chubu.ac.jp/faculty/oba_yuichi/English/
 
-
-- name: Individuals
-  people:
   - name: Joseph Ryan
     pic: joe_ryan.jpg
     position: PI
@@ -100,7 +82,8 @@ groups:
       - title: twitter
         url: twitter.com
 
-   
+
+
 # Jekyll configuration
 
 sass:
